[package]
name = "editor"
version = "0.0.1"
edition = "2021"

[lib]
name = "editor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ttf-parser = { version = "0.13.4", features = [] }
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
# lazy_static = "1.4.0"

# [dependencies.spin]
# version = "0.9.2"
# features = ['spin_mutex']

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"

# For some reason, turning this on reduces the binary size from 1.5 MB to 22 KB.
# I guess Zero-Cost Abstractions are only Zero-Cost if you're a big-brained
# compiler programmer. Otherwise they cost around 1.478 MB.
#                               - Albert Liu, Dec 06, 2021 Mon 23:08 EST
lto = true

