[package]
name = "editor"
version = "0.0.1"
edition = "2021"

[lib]
name = "editor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = { version = "0.26.0", features = ["mint"] }
mint = "0.5.8"

# Eventually, we should swap to only using font-rs, and implement all the
# font stuff correctly
ttf-parser = { version = "0.13.4", features = [] }
font-rs = "0.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"

web-sys.version = "0.3.55"
web-sys.features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"

# For some reason, turning this on reduces the binary size from 1.5 MB to 22 KB.
# I guess Zero-Cost Abstractions are only Zero-Cost if you're a big-brained
# compiler programmer. Otherwise they cost around 1.478 MB.
#                               - Albert Liu, Dec 06, 2021 Mon 23:08 EST
lto = true

