[package]
name = "editor"
version = "0.0.1"
edition = "2021"

[lib]
name = "editor"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
mint = "0.5.8"
btree = { path = "./lib/btree" }

# Eventually, we should swap to only using font-rs, and implement all the
# font stuff correctly
ttf-parser = { version = "0.13.4", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.26.0", features = ["mint"] }
glutin = "0.28.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"
js-sys = "0.3.55"
wasm-bindgen = { version = "0.2.78", default-features = false }
console_error_panic_hook = "0.1.7"
winit = { version = "0.26.0", default-features = false, features = ["mint"] }

web-sys.version = "0.3.55"
web-sys.features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlVertexArrayObject',
  'WebGlTexture',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1

# For some reason, turning this on reduces the binary size from 1.5 MB to 22 KB.
# I guess Zero-Cost Abstractions are only Zero-Cost if you're a big-brained
# compiler programmer. Otherwise they cost around 1.478 MB.
#                               - Albert Liu, Dec 06, 2021 Mon 23:08 EST
lto = true

[package.metadata.wasm-pack.profile.release]
# Toggle this to get some extra debug info for size profiling
# wasm-opt = ['-O4', '-g']
