[package]
name = "rusttype"
version = "0.9.2"
authors = [
    "Dylan Ede <dylanede@googlemail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
    "Alex Butler <alexheretic@gmail.com>",
]
edition = "2018"
description = """
A pure Rust alternative to libraries like FreeType.

RustType provides an API for loading, querying and rasterising TrueType fonts.

It also provides an implementation of a dynamic GPU glyph cache for hardware font rendering.
"""
documentation = "https://docs.rs/rusttype"
homepage = "https://gitlab.redox-os.org/redox-os/rusttype"
repository = "https://gitlab.redox-os.org/redox-os/rusttype"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["font", "truetype", "opentype", "ttf", "otf"]

[dependencies]
owned_ttf_parser = { version = "0.12", default-features = false }
ab_glyph_rasterizer = { version = "0.1.4", default-features = false }
libm = { version = "0.2.1", default-features = false, optional = true }

[features]
default = ["std"]
# Activates usage of std.
std = ["has-atomics", "owned_ttf_parser/default", "ab_glyph_rasterizer/default"]
# Uses libm when not using std. This needs to be active in that case.
libm-math = ["libm", "ab_glyph_rasterizer/libm"]
# Some targets don't have atomics, this activates usage of Arc<T> instead of Rc<T>.
has-atomics = []
